@@ -2,6 +2,8 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Moved documentation to seperate repository (version-independant)
+ * Add socks module
  * Add Mozilla NSS support
  * Enhance custom_log (Alexander Wild <wild@te-elektronik.com>)
  * Use ctrlproxyrc.default if ~/.ctrlproxyrc does not exist
